clean up MapWorldArgument